# src/controllers/portfolioController.ts
@@ -7,7 +7,6 @@ export const getPortfolio = async (req: Request, res: Response) => {
   try {
     const portfolio = await fetchPortfolio(workspaceId);
 
-    console.log(portfolio);
     res.status(201).send(portfolio);
   } catch (error) {
     res.status(500).send({ message: "[ERROR] getAssets", error });
